feat(auth): 实现用户注册和信息获取功能
- 新增用户注册接口和相关逻辑
- 实现用户信息获取接口和存储- 优化登录流程，集成用户信息获取
- 新增验证码发送功能
- 重构认证相关代码，提高可维护性